marking a task as completed

--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -25,43 +25,48 @@
 
   <!-- Задача -->
   {% for task in tasks %}
-  <div class="flex items-center bg-gray-50 shadow-sm rounded-2xl border border-gray-300 p-4">
+  <div class="flex items-center bg-gray-50 shadow-sm rounded-2xl border border-gray-300 p-4 
+    {% if task.status.is_completed %}opacity-50 bg-gray-100{% endif %}">
+  
     <!-- Аватар -->
     <div class="w-1/12 flex justify-center">
       <div class="avatar">
-        <div class="w-12 h-12 bg-{{task.color}}-500 rounded-full ring ring-{{task.color}}-300 ring-offset-1">
-        </div>
+        <div class="w-12 h-12 bg-{{task.color}}-500 rounded-full ring ring-{{task.color}}-300 ring-offset-1"></div>
       </div>
     </div>
-
+  
     <!-- Название и теги -->
     <div class="w-5/12">
-      <h3 class="text-lg font-semibold text-black"><a href="{% url_task task 'task_detail' %}">{{ task.name }}</a></h3>
+      <h3 class="text-lg font-semibold text-black 
+        {% if task.status.is_completed %}line-through text-gray-500{% endif %}">
+        <a href="{% url_task task 'task_detail' %}">{{ task.name }}</a>
+      </h3>
       <div class="flex gap-2 text-sm text-gray-400 mt-1 mb-1">
         {% for t in task.tag.all %}
         <span class="inline-flex items-center rounded-md {{ t.color.bg_color }} px-2 py-1 text-sm font-medium border {{ t.color.border_color }} {{ t.color.text_color }}">{{ t.name }}</span>
         {% endfor %}
       </div>
     </div>
-
+  
     <!-- Исполнители -->
     <div class="w-2/12 flex justify-start">
       <div class="avatar">
         <div class="w-12 h-12 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2"></div>
       </div>
     </div>
-
+  
     <!-- Статус -->
     <div id="status-{{task.pk}}" class="w-2/12">
       {% include 'tasks/includes/change-status.html' %}
     </div>
-
+  
     <!-- Приоритет -->
     <div class="w-2/12">
       <span class="badge badge-error text-[1.075rem] px-4 py-[0.75rem]">{{task.priority}}</span>
     </div>
   </div>
   {% endfor %}
+  
 
     {% include 'tasks/includes/add-status-modal.html' %}
 </div>
