--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load task_url %}
 
 {% block content %}
 
@@ -66,7 +65,11 @@
             type="text" 
             name="input_search"
             placeholder="Поиск..." 
-            class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"/>
+            class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
+            hx-get="{% url 'teams:projects:tasks:task_search' project.team.pk project.pk %}"
+            hx-trigger="keyup"
+            hx-target="#task-list"
+            />
         <svg 
             class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
             fill="none" 
@@ -110,49 +113,9 @@
   </div>
 
   <!-- Задача -->
-  {% for task in tasks %}
-  <div id="taskDiv-{{task.pk}}" class="flex items-center bg-gray-50 shadow-sm rounded-2xl border border-gray-300 p-4">
-  
-    <!-- Аватар -->
-    <div class="w-1/12 flex justify-center">
-      <div id="avatar-{{task.pk}}" class="avatar {% if task.status.is_completed %}grayscale{% endif %}">
-        <div class="w-12 h-12 bg-{{task.color}}-500 rounded-full ring ring-{{task.color}}-300 ring-offset-1"></div>
-      </div>
-    </div>
-  
-    <!-- Название и теги -->
-    <div class="w-5/12">
-      <h3 id="titleTask-{{task.pk}}" class="text-lg font-semibold text-black 
-        {% if task.status.is_completed %}line-through text-gray-500{% endif %}">
-        <a href="{% url_task task 'task_detail' %}">{{ task.name }}</a>
-      </h3>
-      <div id="tagList-{{task.pk}}" class="flex gap-2 text-sm text-gray-400 mt-1 mb-1 {% if task.status.is_completed %}grayscale{% endif %}">
-        {% for t in task.tag.all %}
-        <span class="inline-flex items-center rounded-md px-2 py-1 text-sm font-medium border {{ t.color.bg_color }} {{ t.color.border_color }} {{ t.color.text_color }}"
-        >{{ t.name }}</span>
-        {% endfor %}
-      </div>
-    </div>
-  
-    <!-- Исполнители -->
-    <div class="w-2/12 flex justify-start">
-      <div id="exAvatar-{{task.pk}}" class="avatar {% if task.status.is_completed %}grayscale{% endif %}">
-        <div class="w-12 h-12 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2"></div>
-      </div>
-    </div>
-  
-    <!-- Статус -->
-    <div id="status-{{task.pk}}" class="w-2/12">
-      {% include 'tasks/includes/change-status.html' %}
-    </div>
-  
-    <!-- Приоритет -->
-    <div id="priority-{{task.pk}}" class="w-2/12 {% if task.status.is_completed %}grayscale{% endif %}">
-      <span class="badge badge-error text-[1.075rem] px-4 py-[0.75rem]">{{task.priority}}</span>
-    </div>
-  </div>
-  {% endfor %}
-  
+  <div id="task-list">
+  {% include 'tasks/includes/task.html' %}
+  </div>  
 
     {% include 'tasks/includes/add-status-modal.html' %}
 </div>
