a form for creating tasks

--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -99,9 +99,10 @@
       <button onclick="document.getElementById('filterForm').style.display='block'" class="btn btn-outline border-gray-400 text-gray-700 hover:bg-gray-100">
         Добавить фильтры
       </button>
-      <button class="btn btn-primary text-lg text-white whitespace-nowrap" onclick="">
+      <button class="btn btn-primary text-lg text-white whitespace-nowrap" onclick="modal_create_task.showModal();">
         Создать задачу
       </button>
+      {% include 'tasks/includes/create-task-modal.html' %}
     </div>
   </div>
 
