--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -100,6 +100,6 @@
 
     	</div>
 
-	  <script src="{% static 'script/index.js' %}"></script>
+	  <script src="{% static 'teams/scripts/index.js' %}"></script>
 </body>
 </html>
