--- a/Project_Manager/templates/home-page.html
+++ b/Project_Manager/templates/home-page.html
@@ -97,6 +97,6 @@
             </div>
 	  </div>
 
-	<script src="{% static 'script/index.js' %}"></script>
+	<script src="{% static 'teams/scripts/index.js' %}"></script>
 </body>
 </html>
