--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -52,10 +52,16 @@
       </div>
   
       <div class="flex items-end w-full sm:w-1/5 min-w-[140px]">
-        <button type="submit" class="btn btn-primary w-full text-white shadow-sm">
-          Применить
-        </button>
+        <div class="flex w-full gap-1">
+          <button type="reset" name="reset" value="1" class="btn btn-outline text-black w-1/2 shadow-sm text-sm hover:text-white hover:bg-neutral-700">
+            Сбросить
+          </button>
+          <button type="submit" class="btn btn-primary w-1/2 text-white shadow-sm text-sm">
+            Применить
+          </button>
+        </div>
       </div>
+
     </div>
   </form>
   
