--- a/Project_Manager/templates/projects/includes/members.html
+++ b/Project_Manager/templates/projects/includes/members.html
@@ -2,43 +2,64 @@
 
 {% block configuration_content %}
 
-<div class="p-6 mx-auto">
-    <table class="table w-full">
-        <thead class="bg-gray-50">
-            <tr class="text-gray-600 uppercase text-sm leading-normal">
-                <th class="w-10 py-3 px-3 text-center font-semibold">#</th>
-                <th class="py-3 px-6 text-left font-semibold">Пользователь</th>
-                <th class="py-3 px-6 text-left font-semibold">Почта</th>
-                <th class="py-3 px-6 text-left font-semibold">Учасвтсвует в проектах</th>
-                <th class="py-3 px-6 text-left font-semibold">Роль</th>
-                <th class="py-3 px-6 text-left font-semibold">Дата присоединения</th>
-                <th class="w-10 py-3 px-6 text-left font-semibold"></th>
-            </tr>
-        </thead>
-        <tbody class="text-gray-600 text-sm font-light">
-            {% for user in project.project_members.all %}
-            <tr class="border-b border-gray-200 hover:bg-gray-100 transition-colors {% cycle 'bg-white' 'bg-gray-50' %}">
-                <td class="w-10 py-1 px-3 text-center whitespace-nowrap">{{ forloop.counter }}</td>
-                <td class="py-1 px-6 text-left font-bold">{{ user.username }}</td>
-                <td class="py-1 px-6 text-left">{{ user.email|default:"---" }}</td>
-                <td class="py-1 px-6 text-left">Кол-во проектов</td>
-                <td class="py-1 px-6 text-left">
-                    <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn m-1 bg-gray-100 text-gray-800 rounded-2xl border-gray-400 hover:bg-gray-50 hover:border-sky-600 shadow-md">Гость <i class='fas fa-angle-down mt-1'></i></div>
-                        <ul tabindex="0" class="dropdown-content menu bg-white border border-gray-300 rounded-box z-[1] w-52 p-2 shadow-sm">
-                          <li><a>Админ</a></li>
-                          <li><a>Гость</a></li>
-                        </ul>
-                    </div>
-                </td>
-                <td class="py-1 px-6 text-left">Дата</td>
-                <td class="py-1 px-6 text-left rounded-xl hover:bg-red-500 hover:text-white" title="Исключить из команды">
-                    <i class="fa fa-trash"></i>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+<div class="flex items-center p-4 mb-1">
+    <div class="flex items-center ml-2 gap-x-4 text-3xl font-semibold text-black">
+        <p>Участники проекта</p>
+    </div>
+    <!-- Центральная часть: строка поиска по центру -->
+    <div class="flex-1 flex justify-center">
+        <div class="relative max-w-2xl w-full">
+            <input 
+                type="text" 
+                name="input_search"
+                placeholder="Поиск..." 
+                class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
+                hx-get="{% url 'teams:projects:search_members' project.team.pk project.pk %}"
+                hx-trigger="keyup delay:200ms"
+                hx-target="#member-list"
+            />
+            <svg 
+                class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
+                fill="none" 
+                viewBox="0 0 24 24" 
+                stroke="currentColor"
+            >
+                <path 
+                    stroke-linecap="round" 
+                    stroke-linejoin="round" 
+                    stroke-width="2" 
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" 
+                />
+            </svg>
+        </div>
+    </div>
 
+    <div class="flex-none">
+        <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="modal_create_tag.showModal();">
+            Добавить участников
+        </button>
+
+    </div>
+
+    </div>
+
+    <div class="p-6 mx-auto">
+        <table class="table w-full">
+            <thead class="bg-gray-50">
+                <tr class="text-gray-600 uppercase text-sm leading-normal">
+                    <th class="w-10 py-3 px-3 text-center font-semibold">#</th>
+                    <th class="py-3 px-6 text-left font-semibold">Пользователь</th>
+                    <th class="py-3 px-6 text-left font-semibold">Почта</th>
+                    <th class="py-3 px-6 text-left font-semibold">Учасвтсвует в проектах</th>
+                    <th class="py-3 px-6 text-left font-semibold">Роль</th>
+                    <th class="py-3 px-6 text-left font-semibold">Дата присоединения</th>
+                    <th class="w-10 py-3 px-6 text-left font-semibold"></th>
+                </tr>
+            </thead>
+            <tbody id="member-list" class="text-gray-600 text-sm font-light">
+                {% include 'projects/includes/member.html' %}
+            </tbody>
+        </table>
+    </div>
+</div>
 {% endblock configuration_content %}
