--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -130,9 +130,11 @@
 
   <!-- Задача -->
   <div id="task-list">
-  {% include 'tasks/includes/task.html' %}
-  </div>  
+    {% for task in tasks %}
+      {% include 'tasks/includes/task.html' %}
+    {% endfor %}
 
+  </div>  
     {% include 'tasks/includes/add-status-modal.html' %}
 </div>
 
