--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -130,10 +130,7 @@
 
   <!-- Задача -->
   <div id="task-list">
-    {% for task in tasks %}
-      {% include 'tasks/includes/task.html' %}
-    {% endfor %}
-
+      {% include 'tasks/includes/task.html' with task=task %}
   </div>  
     {% include 'tasks/includes/add-status-modal.html' %}
 </div>
