--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -130,7 +130,7 @@
 
   <!-- Задача -->
   <div id="task-list">
-      {% include 'tasks/includes/task.html' with task=task %}
+      {% include 'tasks/includes/tasks.html'%}
   </div>  
     {% include 'tasks/includes/add-status-modal.html' %}
 </div>
