--- a/Project_Manager/templates/teams/workplace.html
+++ b/Project_Manager/templates/teams/workplace.html
@@ -9,7 +9,7 @@
         <h1 class="card-title text-2xl text-white">Создать команду</h1>
         <p class="text-white">Создайте команду, добавьте проекты, решайте задачи.</p>
         <div class="card-actions justify-end">
-          <button class="btn items-center justify-start overflow-hidden font-medium bg-indigo-100 rounded-lg hover:bg-transparent group hover:border-white hover:border-2 py-1.5 px-2.5 animate-pulse hover:animate-none">
+          <button onclick="add_team_modal.showModal()" class="btn items-center justify-start overflow-hidden font-medium bg-indigo-100 rounded-lg hover:bg-transparent group hover:border-white hover:border-2 py-1.5 px-2.5 animate-pulse hover:animate-none">
             <span class="text-left text-indigo-900 transition-colors group-hover:text-white">Создать команду</span>
           </button>
         </div>
